--- a/config.properties
+++ b/config.properties
@@ -1,1 +1,7 @@
 name:sunilkumar
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.username=postgres
+spring.datasource.password=Mohan@12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
