--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 name:sunilkumar
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.url=jdbc:postgresql://localhost:5432/first
 spring.datasource.username=postgres
 spring.datasource.password=Mohan@12345
 spring.jpa.hibernate.ddl-auto=update
