--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/first
+spring.datasource.username=postgres
+spring.datasource.password=Mohan@12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
