Update username in config.properties

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,1 @@
-name:sunilkumar
-spring.datasource.url=jdbc:postgresql://localhost:5432/first
-spring.datasource.username=postgres
-spring.datasource.password=Mohan@12345
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
+name:Mohankrishna
