--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=Mohan@12345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+name=mohankrishna
