--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/first
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/e_library
+spring.datasource.username=root
 spring.datasource.password=Mohan@12345
-spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
