--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/e_library
-spring.datasource.username=root
-spring.datasource.password=Mohan@12345
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+spring.datasource.username=mohan
+spring.datasource.password=mohan123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
