--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/e_library
+spring.datasource.url=jdbc:mysql://localhost:3306/e_librar
 spring.datasource.username=root
 spring.datasource.password=Mohan@12345
 
